# polykit-rust

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
.cursor/plans/: polybase-v2-rust-foundation_ed052ff5.plan.md
.sisyphus/: boulder.json
.sisyphus/evidence/: F1-oracle-compliance-v2.txt  F1-oracle-compliance.txt  F2-quality-v2.txt  F2-quality-v3.txt  F2-quality.txt  F3-manual-qa.txt  F4-scope-fidelity.txt  task-1-metadata.json  task-2-readme.md  task-3-ci.yml  task-4-level.txt  task-5-format.txt  task-6-error.txt
.sisyphus/notepads/polylog-rust/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/task-2/: learnings.md
.sisyphus/plans/: polylog-rust.md
crates/polybase/: Cargo.toml  README.md
crates/polybase-sqlite/: Cargo.toml  README.md
crates/polybase-sqlite/migrations/: 0001_kvs.sql  0002_offline_queue.sql
crates/polybase-sqlite/src/: lib.rs  manager.rs  queue.rs  store.rs
crates/polybase-tauri/src/: commands.rs  events.rs  lib.rs
crates/polybase/migrations/: 0001_kvs.sql
crates/polybase/src/: auth.rs  client.rs  contract.rs  edge.rs  encryption.rs  errors.rs  events.rs  kvs.rs  lib.rs  persistence.rs  storage.rs
crates/polybase/src/offline_queue/: mod.rs
crates/polybase/src/realtime/: mod.rs
crates/polybase/src/registry/: mod.rs  schema.rs
crates/polybase/src/sync/: coordinator.rs  echo.rs  mod.rs  pull.rs  push.rs  reconcile.rs  reducer.rs  remote.rs
crates/polylog/: Cargo.toml  README.md
crates/polylog/examples/: init_harness.rs
crates/polylog/src/: builder.rs  catch.rs  clean.rs  console.rs  error.rs  file.rs  format.rs  init.rs  level.rs  level_override.rs  lib.rs
crates/polylog/tests/: color_mode_env.rs  init_behavior.rs  smoke.rs
crates/polysym/: Cargo.toml  README.md
crates/polysym-build/: Cargo.toml
crates/polysym-build/src/: lib.rs
crates/polysym/src/: lib.rs
crates/tauri-plugin-polybase/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-polybase/permissions/: default.toml
crates/tauri-plugin-polybase/permissions/autogenerated/: reference.md
crates/tauri-plugin-polybase/permissions/autogenerated/commands/: current_session.toml  decrypt.toml  decrypt_batch.toml  edge_call.toml  encrypt.toml  encrypt_batch.toml  kvs_delete.toml  kvs_get.toml  kvs_set.toml  set_session.toml  storage_download.toml  storage_signed_url.toml  storage_upload.toml
crates/tauri-plugin-polybase/permissions/schemas/: schema.json
crates/tauri-plugin-polybase/src/: commands.rs  events.rs  lib.rs  queue_store.rs  session_store.rs
examples/: init_harness.rs
src/: lib.rs
src/log/: builder.rs  catch.rs  console.rs  error.rs  file.rs  format.rs  init.rs  level.rs  level_override.rs  mod.rs
tests/: color_mode_env.rs  init_behavior.rs  smoke.rs
