[package]
name = "polykit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Polykit utility library for Rust"

[lib]
name = "polykit"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
tracing-appender = "0.2"
tracing-log = "0.2"
owo-colors = { version = "4", features = ["supports-colors"] }
jiff = { version = "0.2", default-features = false, features = ["std", "tz-system"] }

[dev-dependencies]
log = "0.4"
