[workspace]
resolver = "3"
members = [
    "crates/polylog",
    "crates/polybase",
    "crates/tauri-plugin-polybase",
    "crates/polybase-sqlite",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Danny Stewart"]
license = "MIT"
repository = "https://github.com/dannystewart/polykit-rust"

[workspace.dependencies]
polylog = { version = "0.2.0", path = "crates/polylog" }
polybase = { version = "0.2.0", path = "crates/polybase", default-features = false }
polybase-sqlite = { version = "0.2.0", path = "crates/polybase-sqlite" }

aes-gcm = "0.10.3"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.10"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
hkdf = "0.12.4"
hmac = "0.12"
jiff = { version = "0.2", default-features = false, features = [
    "std",
    "tz-system",
    "tzdb-zoneinfo",
] }
once_cell = "1.20"
owo-colors = { version = "4", features = ["supports-colors"] }
parking_lot = "0.12"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", default-features = false, features = [
    "sqlite",
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "chrono",
] }
tempfile = "3.20"
tauri = { version = "=2.11.0", features = [] }
tauri-plugin-store = "=2.4.2"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
    "fs",
    "io-util",
    "net",
] }
tokio-tungstenite = { version = "0.26.2", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "registry",
    "std",
] }
ulid = "1.2.0"
url = "2.5"
uuid = { version = "1.16.0", features = ["serde", "v4", "v5", "v7"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
