[package]
name = "polybase-sqlite"
description = "Default LocalStore implementation for polybase, backed by sqlx + SQLite. Per-user database files."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "polybase_sqlite"

[dependencies]
polybase = { workspace = true, default-features = false }
polylog.workspace = true

async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
