[package]
name = "polysym-build"
description = "Build-time helper for generating SF Symbol icon assets for Tauri apps"
readme = "README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true
