[package]
name = "polysym-build"
description = "Build-time helper for generating SF Symbol icon assets for Tauri apps"
readme = "README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
