[package]
name = "polysym-build"
description = "Build-time helper for generating SF Symbol icon assets for Tauri apps"
readme = "README.md"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
png = "0.17"
lucide-svg-rs = "0.2"
resvg = { version = "0.47", default-features = false }
tiny-skia = "0.12"
usvg = { version = "0.47", default-features = false }

[lints]
workspace = true
